syntax = "proto3";
package echo;
option go_package = "echopb";

message PingRequest {
    string message = 1;
}

message PongResponse {
    string message = 1;
}


service EchoService {
    rpc Ping(PingRequest) returns (PongResponse);
    rpc PingStream(stream PingRequest) returns (PongResponse);
}